--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </style>
 </head>
 <body>
-<h1>This is version 2.0</h1>
+<h1>This is version 6.0</h1>
+<div>This is an update !</div>
 </body>
 </html>
