--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
 <h1>This is version 6.0</h1>
-<div>This is an update !</div>
+<div>This is an update ! and another one to be sure :)</div>
 </body>
 </html>
